# 6-AxisRobotArm

./: .gitignore  Note.md  README.md
.agents/rules/: studyplan.md
Notes/: Note.md
src/robot_arm_demo/: CMakeLists.txt  package.xml
src/robot_arm_demo/launch/: display.launch.py  gazebo.launch.py
src/robot_arm_demo/rviz/: urdf.rviz
src/robot_arm_demo/src/: add_obstacles.cpp  kinematics_solver.cpp
src/robot_arm_demo/urdf/: 6_axis_arm.urdf  6_axis_arm.urdf.xacro
src/robot_arm_moveit_config/: package.xml
src/robot_arm_moveit_config/config/: 6_axis_arm.srdf  joint_limits.yaml
src/robot_arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
